example/go-http-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: http-go
  labels:
    app: myapp
spec:
  containers:
  - name: http-go
    image: youngfrom/http-go
    ports:
    - containerPort: 8080
