example/redis-nginx-multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
  labels:
    app: multi
spec:
  containers:
  - name: nginx
    ports:
      - containerPort: 80
    image: nginx
  - name: redis
    image: redis
    ports:
      - containerPort: 8080
